# app/Http/Controllers/AuthController.php
@@ -14,10 +14,11 @@ class AuthController extends Controller
     * @OA\Post(
     *      path="/register",
     *      operationId="storeUser",
-    *      tags={"Users"},
+    *      tags={"Register"},
     *      summary="User Register",
     *      description="User Register here",
     *      @OA\RequestBody(
+    *       @OA\JsonContent(),
     *          required=true,
     *          @OA\MediaType(
     *                mediaType="multipart/form-data",
@@ -83,6 +84,44 @@ class AuthController extends Controller
         ], 200);
     }
 
+      /**
+        * @OA\Post(
+        * path="/login",
+        * operationId="authLogin",
+        * tags={"Login"},
+        * summary="User Login",
+        * description="Login User Here",
+        *     @OA\RequestBody(
+        *         @OA\JsonContent(),
+        *         @OA\MediaType(
+        *            mediaType="multipart/form-data",
+        *            @OA\Schema(
+        *               type="object",
+        *               required={"email", "password"},
+        *               @OA\Property(property="email", type="email"),
+        *               @OA\Property(property="password", type="password")
+        *            ),
+        *        ),
+        *    ),
+        *      @OA\Response(
+        *          response=201,
+        *          description="Login Successfully",
+        *          @OA\JsonContent()
+        *       ),
+        *      @OA\Response(
+        *          response=200,
+        *          description="Login Successfully",
+        *          @OA\JsonContent()
+        *       ),
+        *      @OA\Response(
+        *          response=422,
+        *          description="Unprocessable Entity",
+        *          @OA\JsonContent()
+        *       ),
+        *      @OA\Response(response=400, description="Bad request"),
+        *      @OA\Response(response=404, description="Resource Not Found"),
+        * )
+        */
     public function login(Request $request){
         $validator = \Validator::make($request->all(), [
             'email' => 'required|exists:users',
